; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc_new.c_loadOpStack.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc_new.c_loadOpStack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opStackRegType = common dso_local global i32* null, align 8
@buf = common dso_local global i32* null, align 8
@compiledOfs = common dso_local global i64 0, align 8
@opStackLoadInstructionAddr = common dso_local global i32** null, align 8
@.str = private unnamed_addr constant [4 x i8] c"lwz\00", align 1
@PPC_LWZ = common dso_local global i32 0, align 4
@opStackIntRegisters = common dso_local global i32* null, align 8
@R_OPSTACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @loadOpStack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loadOpStack(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %39, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %42

8:                                                ; preds = %4
  %9 = load i32*, i32** @opStackRegType, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load i32*, i32** @buf, align 8
  %18 = load i64, i64* @compiledOfs, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32**, i32*** @opStackLoadInstructionAddr, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32*, i32** %20, i64 %22
  store i32* %19, i32** %23, align 8
  %24 = load i32, i32* @PPC_LWZ, align 4
  %25 = load i32*, i32** @opStackIntRegisters, align 8
  %26 = load i32, i32* %3, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @R_OPSTACK, align 4
  %31 = load i32, i32* %3, align 4
  %32 = mul nsw i32 %31, 4
  %33 = add nsw i32 %32, 4
  %34 = call i32 @InstImm(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %29, i32 %30, i32 %33)
  %35 = load i32*, i32** @opStackRegType, align 8
  %36 = load i32, i32* %3, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  store i32 1, i32* %38, align 4
  br label %39

39:                                               ; preds = %8
  %40 = load i32, i32* %3, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %3, align 4
  br label %4

42:                                               ; preds = %4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @InstImm(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
